$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------

1.3
---

- fixed DHCP server "deny unknown clients" option with known clients
  without a statically assigned IP address

- fixed a security issue in the DHCP client (CVE-2009-0692)


1.3b18
------

- fix broken IPsec support (missing library)


1.3b17
------

- Convert from BRIDGE to if_bridge. Remove multi-interface bridge check, 
  and checkbox under System > Advanced for filtering bridge since member 
  interfaces will always be filtered. 

- fix a problem with ipnat refusing to create new RDR translation entries
  in the NAT table if a MAP entry exists for the same port, even though that
  check is probably only meant to check for existing RDR entries. This
  fixes issues with SIP communication when there is an inbound NAT
  mapping for port 5060.
  (see also http://marc.info/?l=ipfilter&m=121749272404107&w=2)

- fixed problems when using advanced outbound NAT rules with destination
  matching (non-FTP connections were processed by the ipnat FTP proxy,
  leading to slowness, lost connections, rogue ICMP host unreachable
  messages etc. because ipfilter requires an additional match statement
  on the destination port when using proxies)

- fix DHCP lease page to only show the last lease for a given IP address
  (see dhcpd.leases(5))

- fix for IPv6 pages in user/group manager

- show IPv4 gateway on Status: Interfaces page (was removed inadvertently)

- fixed bug with IPv6 subnets in firewall rules

- added device msk to kernel configuration

- updated base system to FreeBSD 6.4

- avoid PEAR dependency and fix DHCPv6 range check when interface is not
  configured with a v6 address

- put logging back in for anti-spoof block rule


1.3b16
------

- Open firewall rules for link-local ipv6 addresses on opt and lan interfaces
  Initial basic support for secondary ip addresses
  Suggested ipv6 addr fix and dhcpv6 fix